sjengida/c3/Queen
/data/output_dir/patch/sjeng/ida/clang/O3/sjeng-clang-O3/Queen/src/neval.c:750:7: error: use of undeclared identifier 'dword_66859C'
v5 = &dword_66859C[v3]; 
      ^
1 error generated.
make: *** [/data/output_dir/patch/sjeng/ida/clang/O3/sjeng-clang-O3/Queen/src/obj/neval.o] Error 1
